fixing position issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,7 @@ input#new-todo {
     border-bottom: 1px solid var(--horiz-rule);
     display: flex;
     align-items: center;
-    /* position: relative; */
+    position: relative;
 }
 
 input[type=checkbox] {
